--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   camera: ^0.10.5+7
   google_ml_kit: ^0.16.3
   permission_handler: ^11.0.1
+  get: ^4.6.6
+  image_picker: ^1.0.5
+  font_awesome_flutter: ^10.6.0
+  image: 3.1.3
   
 
 dev_dependencies:
